Prominent buttons receive a lighter background on focus.

This corresponds with material design standards.
It does not affect GTK themes on Linux, which are already using a hack
to get an appropriate color for prominent buttons.

Bug: 900774
Change-Id: I84efa8681fd69aba4e6f34df9adeb05a2a7532c5
Reviewed-on: https://chromium-review.googlesource.com/c/1369033
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615343}
Former-commit-id: 4fab1094a96e7684397a30217d0fdd843bb9f5e4